--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -1,33 +1,65 @@
-.App {
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: rgb(119, 211, 228);
+}
+
+.container {
+  background-color: rgb(50, 103, 110);
   text-align: center;
+  margin-top: 2rem;
+  padding: 1rem;
+  border-radius: 2rem;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.signup {
+  width: 70%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input-field input {
+  font-size: 2rem !important;
+  color: antiquewhite;
 }
 
-.App-link {
-  color: #61dafb;
+.input-field label {
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reg-button {
+  padding: 1.1rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  width: 13rem;
+  border-radius: 0.6rem;
+  color: rgb(69, 71, 69);
+  background-color: rgb(235, 231, 227);
+  float: left;
+  cursor: pointer;
+  border: none;
+}
+
+.reg-button:hover {
+  background-color: rgb(149, 218, 218);
+}
+
+.login-button {
+  padding: 1.1rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  width: 13rem;
+  border-radius: 0.6rem;
+  color: rgb(69, 71, 69);;
+  background-color: rgb(75, 189, 81);
+  float: right;
+  cursor: pointer;
+  border: none;
+}
+
+.login-button:hover {
+  background-color: rgb(75, 189, 81);
 }
